# internal/router/router.go
@@ -6,16 +6,22 @@ import (
 	"uniglobal/internal/auth"
 	"uniglobal/internal/handlers"
 	"uniglobal/internal/repository"
+
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+	"github.com/tmc/langchaingo/llms/googleai"
+)
+
+var (
+    llm    *googleai.GoogleAI
 )
 
 func SetupRouter(r *gin.Engine)  {
     repos := repository.NewRepositories() 
 
     rHandlers := handlers.NewHandlers(repos) // resource handlers 
-
+    letterHandler := handlers.LetterHandler{} 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
     pprofGroup := r.Group("/debug/pprof")
@@ -48,6 +54,14 @@ func SetupRouter(r *gin.Engine)  {
 	})
 	r.GET("/chats", auth.AdminMiddleware(), rHandlers.ChatHandler.GetAllChats)
 	r.GET("/userchats", auth.AuthMiddleware(), rHandlers.ChatHandler.GetUserChats)
+    
+    r.POST("/api/generate/letter", auth.AuthMiddleware(), func(c *gin.Context) {
+		handlers.GenerateLetterHandler(c, llm)
+	})
+
+	// Add endpoints to get letter by ID and get all user's letters
+	r.GET("/api/letters/:id", auth.AuthMiddleware(), letterHandler.GetLetterByID)
+	r.GET("/api/letters", auth.AuthMiddleware(), letterHandler.GetUserLetters)
 
     r.POST("/send_checklist", auth.AuthMiddleware(), rHandlers.ChecklistHandler.SendCheckListByType)
     r.POST("/send_default_checklist", rHandlers.ChecklistHandler.SendDefaultCheckList)
@@ -55,8 +69,4 @@ func SetupRouter(r *gin.Engine)  {
     r.GET("/favorites", auth.AuthMiddleware(), handlers.GetFavResponses)
     r.PUT("/messages/like", auth.AuthMiddleware(), handlers.ToggleLikeMessage)
     
-    r.POST("/api/generate/motivational_letter", auth.AuthMiddleware(), func(c *gin.Context) {
-		handlers.CreateMotivationalLetterHandler(c)})
-		r.POST("/api/generate/recommendation_letter", auth.AuthMiddleware(), func(c *gin.Context) {
-			handlers.CreateRecommendationLetterHandler(c)})
 }
